@@ -19,9 +19,14 @@ Bugfixes:
 
  * Issue #122: a wrong variable name was used in AbstractedFS.validpath method.
 
+ * Issue #123: PORT command doesn't bind to correct address in case an alias
+   is created for the local network interface.
+
 API changes since 0.5.2:
 
  * FTPHandler.data_server attribute renamed in FTPHandler._dtp_acceptor.
+
+ * ActiveDTP.source_address attribute has been added.
 
 
 Version: 0.5.2 - Date: 2009-09-14
